--- a/Journal/app/views/file-preview/file-preview.html
+++ b/Journal/app/views/file-preview/file-preview.html
@@ -19,7 +19,7 @@
 			<div class="ui-resizable ui-pane ui-pane-left">
 				<div class="pane-content">
 					<art-tab-control>
-						<art-tab heading="Conversation">
+						<art-tab heading="Comments">
 							<div class="layout-container">
 								<art-chat-control id="ctl-chat" entity="{{t.entity.uri}}"></art-chat-control>
 							</div>
@@ -31,7 +31,7 @@
 						</art-tab>
 						<art-tab heading="Todo">
 							<div class="layout-container padding-x-xl padding-y-xl text-center">
-								Under construction.
+								<art-task-control id="ctl-topic" entity="{{t.entity.uri}}"></art-task-control>
 							</div>
 						</art-tab>
 					</art-tab-control>
