Implemented horizontal tabs for projects.

--- a/Journal/app/views/settings/settings.html
+++ b/Journal/app/views/settings/settings.html
@@ -1,6 +1,6 @@
 <div class="layout-root table-layout">
     <div class="row header">
-		<div class="toolbar">
+		<div class="toolbar toolbar-header">
 			<div class="col">
 				<a class="btn btn-header" ng-click="t.submitAndReturn()"><i class="zmdi zmdi-chevron-left"></i></a>
 			</div>
