--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -10,13 +10,10 @@ $errorTextColor: #FFFFFF;
 $successColor: #5e2f63;
 $successTextColor: #FFFFFF;
 $iconFont: 'Material-Design-Iconic-Font';
-$iconFontSize: 21px;
-$textFont: 'Roboto',
-'Helvetica',
-'Arial',
-sans-serif;
-$textColor: #F0F0F0;
-$labelTextColor: darken($textColor, 25%);
+$iconFontSize: 24px;
+$textFont: 'Roboto','Helvetica','Arial',sans-serif;
+$textColor: #303030;
+$labelTextColor: lighten($textColor, 20%);
 $labelBackgroundColor: transparent;
 $itemTextColor: $textColor;
 $itemBackgroundColor: rgba($textColor, .025);
@@ -25,11 +22,12 @@ $highlightBackgroundColor: rgba($textColor, .075);
 $selectionTextColor: $textColor;
 $selectionBorderColor: transparent;
 $selectionBackgroundColor: rgba($textColor, .1);
-$windowBackgroundColor: #202020;
+$windowBackgroundColor: #ededed;
 $headerBackgroundColor: #303030;
-$headerTextColor: $textColor;
-$headerHeight: 45px;
-$toolbarHeight: 45px;
+$headerTextColor: #ededed;
+$headerHeight: 40px;
+$toolbarHeight: 40px;
+$toolbarIconHeight: 32px;
 $toolbarBackgroundColor: $headerBackgroundColor;
 $toolbarTextColor: $headerTextColor;
 $overlayTextColor: $textColor;
@@ -39,7 +37,7 @@ $buttonHoverBackgroundColor: rgba($headerBackgroundColor, .4);
 $buttonTextColor: $headerTextColor;
 $inputBackgroundColor: #FFFFFF;
 $inputTextColor: #000000;
-$windowTitlebarHeight: 30px;
+$windowTitlebarHeight: 37px;
 $scrollbarSize: 12px;
 $tooltipBackgroundColor: #EEEEEE;
 $tooltipTextColor: black;
@@ -55,8 +53,10 @@ html,
 body {
 	height: 100%; // Make the body fill the browser window.
 	width: 100%;
+	/*
 	-webkit-user-select: none; // Disable text selection.
 	user-select: none;
+	*/
 }
 
 h1 {
@@ -327,12 +327,12 @@ button:focus,
 
 .btn-header {
 	margin: 0 !important;
-	min-width: 45px;
-	height: 45px;
-	line-height: 45px;
+	min-width: $headerHeight;
+	height: $headerHeight;
+	line-height: $headerHeight;
 	vertical-align: middle;
 	background: none;
-	color: $labelTextColor;
+	color: $headerTextColor;
 }
 
 .btn-header.btn-text {
@@ -369,6 +369,9 @@ button:focus,
 	text-align: left;
 }
 
+
+/* TABS */
+
 .nav-tabs {
 	border: none;
 	margin: 0;
@@ -381,7 +384,7 @@ button:focus,
 	color: $labelTextColor;
 	text-transform: uppercase;
 	transition: all .1s linear;
-	padding: .9em 1em;
+	padding: 9px 11px;
 }
 
 .nav-tabs.nav-tabs-top li a {
@@ -429,6 +432,36 @@ button:focus,
 	border: none;
 	border-left: 2px solid $textColor !important;
 	color: $highlightTextColor;
+}
+
+.header-tabs .nav-tabs {
+	height: $headerHeight;
+	background: $headerBackgroundColor;
+	padding: 0;
+	margin: 0;
+}
+
+.header-tabs .nav-tabs li a {
+	height: $headerHeight;
+	border: none;
+	background: rgba(255, 255, 255, .05);
+	color: $headerTextColor;
+	text-transform: none;
+}
+
+.header-tabs .nav-tabs li a:hover {
+	border: none;
+	background: lighten($headerBackgroundColor, 15%);
+	color: $headerTextColor;
+	text-transform: none;
+}
+
+.header-tabs .nav-tabs li.active a {
+	border: none;
+	background: $windowBackgroundColor;
+	color: $textColor;
+	font-weight: 500;
+	text-transform: none;
 }
 
 .center-parent {
@@ -623,6 +656,10 @@ h4 {
 	background: $toolbarBackgroundColor;
 	color: lighten($labelTextColor, 10%) !important;
 	padding: 3em 0;
+}
+
+.header .toolbar {
+	color: $headerTextColor;
 }
 
 .header .header-border-container {
@@ -955,6 +992,20 @@ h4 {
 	height: $toolbarHeight;
 }
 
+.toolbar.toolbar-header .btn {
+	color: rgba($headerTextColor, .7);
+}
+
+.toolbar-header .btn .btn-label {
+	cursor: pointer;
+	color: $headerTextColor;
+}
+
+.toolbar-header.pull-right .btn:first-child .btn-label {
+	margin-left: 0;
+	margin-right: 15px;
+}
+
 .toolbar .btn:hover,
 .toolbar .btn:active,
 .toolbar .btn.btn-active {
@@ -962,25 +1013,33 @@ h4 {
 	color: rgba($textColor, 1);
 }
 
+.toolbar.toolbar-header .btn:hover,
+.toolbar.toolbar-header .btn:active,
+.toolbar.toolbar-header .btn.btn-active {
+	background: rgba(255, 255, 255, .1);
+	color: rgba($headerTextColor, 1);
+}
+
 .toolbar .btn i.zmdi {
+	color: $toolbarTextColor;
 	display: inline-block;
-	width: 45px;
-	height: 45px;
-	line-height: 45px;
+	width: $toolbarHeight;
+	height: $toolbarHeight;
+	line-height: $toolbarHeight;
 	font-size: $iconFontSize;
 	text-align: center;
 }
 
 .toolbar .btn .btn-label {
-	line-height: 45px;
+	line-height: $toolbarHeight;
 	vertical-align: middle;
-	margin: 0 5px;
+	margin: 0 7px;
 }
 
 .toolbar .icn,
 .toolbar .icn {
-	width: 32px;
-	height: 32px;
+	width: $toolbarIconHeight;
+	height: $toolbarIconHeight;
 }
 
 .toolbar .icn-circle,
@@ -988,6 +1047,11 @@ h4 {
 	border-radius: 50%;
 }
 
+.toolbar img.icn {
+	margin: ($toolbarHeight - $toolbarIconHeight) / 2;
+	margin-left: 7px;
+	margin-right: 7px;
+}
 
 /* ACTIVITIES CHART */
 
@@ -1219,9 +1283,10 @@ svg {
 	width: 201px;
 	height: 235px;
 	margin: 0 5px 5px 0;
-	padding: 0;
+	padding: 5px;
 	border-radius: 0;
-	background: #262626;
+	background: transparent;
+	transition: all ease-in .1s;
 }
 
 .card a {
@@ -1237,11 +1302,10 @@ svg {
 	width: 100%;
 	height: 100;
 	background: transparent;
-	transition: all ease-in .1s;
 }
 
-.card a:hover {
-	background: rgba(#FFFFFF, .15);
+.card:hover {
+	background: darken($windowBackgroundColor, 10%);
 }
 
 .card .file-thumbnail-container {
@@ -1251,7 +1315,7 @@ svg {
 	box-shadow: none;
 	width: 100%;
 	height: 201px;
-	background: #262626 url('resources/images/placeholder-img.png') center center no-repeat;
+	background: #ffffff url('resources/images/placeholder-img.png') center center no-repeat;
 	background-size: 125px auto;
 }
 
@@ -1283,7 +1347,7 @@ svg {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
-	color: lighten($labelTextColor, 10%);
+	color: $textColor;
 }
 
 .card .file-extension {
@@ -2559,6 +2623,8 @@ iframe {
 	height: 100%;
 	z-index: 0;
 }
+
+/* WINDOW */
 
 #window.win.maximized>.layout-root {
 	margin: 5px;
