--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -526,7 +526,8 @@ button:focus,
 
 .header-tabs .nav-tabs li a.btn-close .zmdi {
 	top: 0;
-	font-size: 18px;
+	font-size: 18px !important;
+	line-height: 18px;
 	font-weight: 300;
 }
 
@@ -745,6 +746,17 @@ h4 {
 	font-size: 20px !important;
 }
 
+.header-toolbar {
+	display: block;
+	height: $toolbarHeight;
+	padding: 0;
+	margin: 0;
+}
+
+.header-toolbar span {
+	height: $toolbarHeight;
+	line-height: $toolbarHeight;
+}
 
 /* BODY */
 
@@ -1126,7 +1138,6 @@ h4 {
 	margin-left: 7px;
 	margin-right: 7px;
 }
-
 
 /* ACTIVITIES CHART */
 
