--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -22,7 +22,7 @@ $highlightBackgroundColor: rgba($textColor, .075);
 $selectionTextColor: $textColor;
 $selectionBorderColor: transparent;
 $selectionBackgroundColor: rgba($textColor, .1);
-$windowBackgroundColor: #ededed;
+$windowBackgroundColor: #e6e6e6;
 $headerBackgroundColor: #393939;
 $headerTextColor: #ededed;
 $headerHeight: 40px;
@@ -1101,6 +1101,11 @@ h4 {
 	height: $toolbarHeight;
 	padding: 0;
 	margin: 0;
+}
+
+.toolbar.toolbar-floating {
+	border-radius: 2px;
+	box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.25);
 }
 
 .toolbar.hidden {
