--- a/Journal/app/views/file-list/file-list.html
+++ b/Journal/app/views/file-list/file-list.html
@@ -1,7 +1,7 @@
 <div class="layout-root" id="content">
 	<div class="toolbar toolbar-header pull-right">
 		<a class="btn btn-header" href="#/settings">
-			<img id="userPhoto" class="icn icn-circle pull-left">
+			<img id="userPhoto" class="icn icn-circle icn-user pull-left">
 			<label id="userName" class="btn-label"></label>
 		</a>
 	</div>
