--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -26,7 +26,7 @@ $windowBackgroundColor: #e6e6e6;
 $headerBackgroundColor: #393939;
 $headerTextColor: #ededed;
 $headerHeight: 40px;
-$toolbarHeight: 45px;
+$toolbarHeight: 42px;
 $toolbarIconHeight: 32px;
 $toolbarBackgroundColor: $headerBackgroundColor;
 $toolbarTextColor: $headerTextColor;
@@ -39,7 +39,7 @@ $inputBackgroundColor: #FFFFFF;
 $inputTextColor: #000000;
 $windowTitlebarHeight: 37px;
 $scrollbarSize: 12px;
-$tooltipBackgroundColor: #EEEEEE;
+$tooltipBackgroundColor: #F1F1F1;
 $tooltipTextColor: black;
 $editorBackgroundColor: #efefef;
 $editorContentColor: white;
@@ -268,7 +268,7 @@ button:hover,
 .btn:hover,
 .btn-default:hover {
 	background: $buttonHoverBackgroundColor;
-	color: $buttonTextColor !important;
+	color: $buttonTextColor;
 }
 
 button:active,
@@ -450,37 +450,37 @@ button:focus,
 	color: $highlightTextColor;
 }
 
-.header-tabs .nav-tabs {
+.header-tabs>.nav-tabs {
 	height: $toolbarHeight;
 	background: $headerBackgroundColor;
 	padding: 0;
 	margin: 0;
 }
 
-.header-tabs .nav-tabs li a.nav-link .zmdi,
-.header-tabs .nav-tabs img {
+.header-tabs>.nav-tabs li a.nav-link .zmdi,
+.header-tabs>.nav-tabs img {
 	position: relative;
-	top: -2px;
+	top: -3px;
 }
 
-.header-tabs .nav-tabs li a.nav-link .zmdi {
+.header-tabs>.nav-tabs li a.nav-link .zmdi {
 	color: darken($headerTextColor, 10%);
 }
 
-.header-tabs .nav-tabs li.active a.nav-link .zmdi {
+.header-tabs>.nav-tabs li.active a.nav-link .zmdi {
 	color: $textColor;
 }
 
-.header-tabs .nav-tabs li a.nav-link:focus {
+.header-tabs>.nav-tabs li a.nav-link:focus {
 	outline: none;
 }
 
-.header-tabs .nav-tabs li a {
+.header-tabs>.nav-tabs li a {
 	border: none;
 	margin: 0;
 }
 
-.header-tabs .nav-tabs li a.nav-link {
+.header-tabs>.nav-tabs li a.nav-link {
 	padding: 0;
 	border-right: 1px solid rgba(255, 255, 255, .05);
 	background: transparent;
@@ -489,42 +489,42 @@ button:focus,
 	text-transform: none;
 }
 
-.header-tabs .nav-tabs li a.nav-link .nav-link-container {
-	padding: 12px 11px;
+.header-tabs>.nav-tabs li a.nav-link .nav-link-container {
+	padding: 10px 11px;
 }
 
-.header-tabs .nav-tabs li:last-child a.nav-link {
+.header-tabs>.nav-tabs li:last-child a.nav-link {
 	border-right: 1px solid transparent;
 }
 
-.header-tabs .nav-tabs li a.nav-link:hover {
+.header-tabs>.nav-tabs li a.nav-link:hover {
 	border-radius: 1px 1px 0 0;
 	border-right: 1px solid transparent;
 }
 
-.header-tabs .nav-tabs li a.nav-link:hover,
-.header-tabs .nav-tabs li a.nav-link .nav-link-container.drop-target-valid {
+.header-tabs>.nav-tabs li a.nav-link:hover,
+.header-tabs>.nav-tabs li a.nav-link .nav-link-container.drop-target-valid {
 	background: lighten($headerBackgroundColor, 5%);
 }
 
-.header-tabs .nav-tabs li.active a.nav-link {
+.header-tabs>.nav-tabs li.active a.nav-link {
 	border-bottom: none;
 	border-radius: 1px 1px 0 0;
 	background: $windowBackgroundColor;
 	text-transform: none;
 }
 
-.header-tabs .nav-tabs li.active a.nav-link,
-.header-tabs .nav-tabs li.active a.nav-link a.btn {
+.header-tabs>.nav-tabs li.active a.nav-link,
+.header-tabs>.nav-tabs li.active a.nav-link a.btn {
 	color: $textColor !important;
 }
 
-.header-tabs .nav-tabs li.active a.nav-link:hover,
-.header-tabs .nav-tabs li.active a.nav-link:hover a.btn {
+.header-tabs>.nav-tabs li.active a.nav-link:hover,
+.header-tabs>.nav-tabs li.active a.nav-link:hover a.btn {
 	color: $highlightTextColor;
 }
 
-.header-tabs .nav-tabs li a.btn-close {
+.header-tabs>.nav-tabs li a.btn-close {
 	position: relative;
 	top: -2px;
 	right: -5px;
@@ -536,18 +536,18 @@ button:focus,
 	color: darken($headerTextColor, 10%);
 }
 
-.header-tabs .nav-tabs li a.btn-close .zmdi {
+.header-tabs>.nav-tabs li a.btn-close .zmdi {
 	top: 0;
 	font-size: 18px !important;
 	line-height: 18px;
 	font-weight: 300;
 }
 
-.header-tabs .nav-tabs li a.btn-close:hover {
+.header-tabs>.nav-tabs li a.btn-close:hover {
 	background: rgba(255, 255, 255, .05);
 }
 
-.header-tabs .nav-tabs li.active a.btn-close:hover {
+.header-tabs>.nav-tabs li.active a.btn-close:hover {
 	background: lighten($windowBackgroundColor, 3%);
 }
 
@@ -745,12 +745,6 @@ h4 {
 
 /* HEADER */
 
-.toolbar {
-	display: table-row;
-	background: $toolbarBackgroundColor;
-	color: $toolbarTextColor;
-}
-
 .header {
 	background: $toolbarBackgroundColor;
 	color: lighten($labelTextColor, 10%) !important;
@@ -788,12 +782,6 @@ h4 {
 }
 
 /* BODY */
-
-#canvas {
-	padding: 0;
-	width: 100%;
-	height: 100%;
-}
 
 .ui-resizable {
 	position: relative;
@@ -1047,6 +1035,25 @@ h4 {
 	overflow-y: scroll !important;
 }
 
+::-webkit-scrollbar {
+	width: $scrollbarSize; /* for vertical scrollbars */
+	height: $scrollbarSize;	/* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+	background: $headerBackgroundColor;
+	border: 2px solid $windowBackgroundColor;
+	border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: lighten($headerBackgroundColor, 10%);
+}
+
 .padding-x-none {
 	padding-left: 0 !important;
 	padding-right: 0 !important;
@@ -1087,7 +1094,6 @@ h4 {
 	padding-bottom: 24px !important;
 }
 
-
 /* FOOTER */
 
 .statusbar {
@@ -1102,58 +1108,94 @@ h4 {
 	background: $windowBackgroundColor;
 }
 
+/* VIEWS */
+
+.view-container {
+	position: relative;
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.view-primary-content,
+.view-secondary-content {
+	transition: width ease-out .2s;
+}
+
+.view-primary-content {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	z-index: 1;
+}
+
+.view-secondary-content {
+	border-left: 1px solid darken($windowBackgroundColor, 3%);
+	background: lighten($windowBackgroundColor, 4%);
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 40%;
+	z-index: 2;
+}
+
+.view-secondary-content.invisible {
+	width: 0;
+}
+
+.view-primary-content>.ng-scope,
+.view-secondary-content>.ng-scope {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.viewer-canvas {
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /* TOOLBARS */
 
 .toolbar {
-	display: table;
-	text-align: center;
-	overflow-y: hidden;
-	transition-property: all;
-	transition-duration: 1s;
-	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-	position: relative;
-	height: $toolbarHeight;
-	padding: 0;
-	margin: 0;
-}
-
-.toolbar.toolbar-floating {
-	border-radius: 2px;
-	box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.25);
-}
-
-.toolbar.hidden {
-	max-height: 0;
-}
-
-.toolbar.visible {
-	max-height: 99999px;
-}
-
-.toolbar .title {
-	font-size: 17px;
-	font-weight: 400;
-	text-align: left;
-	margin: 0 0 0 5px;
-	padding: 0;
-	position: relative;
-	top: 2px;
+	height: $toolbarHeight;	
 }
 
 .toolbar .btn {
-	background: transparent;
-	color: rgba($textColor, .6);
-	border-radius: 0 !important;
-	border: none;
-	padding: 0;
-	margin: 0;
-	transition: all .2s linear;
+	float: left;
+	border-radius: 1px;
 	height: $toolbarHeight;
+	min-width: $toolbarHeight;
+	transition: all .2s linear;
+	padding: 0;
+	line-height: $toolbarHeight - 1px;
 }
 
-.toolbar.toolbar-header .btn {
+.toolbar.toolbar-dark .btn {
+	background-color: $toolbarBackgroundColor;
+	color: $toolbarTextColor;
+}
+
+.toolbar.toolbar-dark .btn:hover {
+	background-color: lighten($toolbarBackgroundColor, 3%);
+	color: $toolbarTextColor;
+}
+
+.toolbar-header .btn {
 	color: rgba($headerTextColor, .7);
+	padding: 0;
+}
+
+.toolbar-header .btn:hover,
+.toolbar-header .btn:active,
+.toolbar-header .btn.btn-active {
+	background: rgba(255, 255, 255, .1);
+	color: rgba($headerTextColor, 1);
 }
 
 .toolbar-header .btn .btn-label {
@@ -1166,105 +1208,14 @@ h4 {
 	margin-right: 15px;
 }
 
-.toolbar .btn:hover,
-.toolbar .btn:active,
-.toolbar .btn.btn-active {
-	background: rgba(255, 255, 255, .1);
-	color: rgba($textColor, 1);
+.toolbar-header .icn.icn-user {
+	width: 26px;
+	height: 26px;
+	margin: 9px 6px 0 6px;
 }
 
-.toolbar.toolbar-header .btn:hover,
-.toolbar.toolbar-header .btn:active,
-.toolbar.toolbar-header .btn.btn-active {
-	background: rgba(255, 255, 255, .1);
-	color: rgba($headerTextColor, 1);
-}
-
-.toolbar .btn i.zmdi {
-	color: $toolbarTextColor;
-	display: inline-block;
-	width: $toolbarHeight;
-	height: $toolbarHeight;
-	line-height: $toolbarHeight;
-	font-size: $iconFontSize;
-	text-align: center;
-}
-
-.toolbar .btn .btn-label {
-	line-height: $toolbarHeight;
-	vertical-align: middle;
-	margin: 0 7px;
-}
-
-.toolbar .icn,
-.toolbar .icn {
-	width: $toolbarIconHeight;
-	height: $toolbarIconHeight;
-}
-
-.toolbar .icn.icn-user {
-	margin-top: 6px;
-	width: 28px;
-	height: 28px;
-}
-
-.toolbar .icn-circle,
-.toolbar .icn-circle {
-	border-radius: 50%;
-}
-
-.toolbar img.icn {
-	margin: ($toolbarHeight - $toolbarIconHeight) / 2;
-	margin-left: 7px;
-	margin-right: 7px;
-}
-
-/* VIEWS */
-
-.view-container {
-	position: relative;
-	display: block;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-
-.view-container .view-toolbar {
-	height: $toolbarHeight;
+.toolbar-view {
 	border-bottom: 1px solid darken($windowBackgroundColor, 3%);
-}
-
-.view-container .view-primary-content,
-.view-container .view-secondary-content {
-	transition: width ease-out .2s;
-}
-
-.view-container .view-primary-content {
-	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	z-index: 1;
-}
-
-.view-container .view-secondary-content {
-	border-left: 1px solid darken($windowBackgroundColor, 3%);
-	background: lighten($windowBackgroundColor, 4%);
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	width: 40%;
-	z-index: 2;
-}
-
-.view-container .view-secondary-content.invisible {
-	width: 0;
-}
-
-.view-toolbar .btn {
-	height: $toolbarHeight;
 }
 
 /* ACTIVITIES CHART */
@@ -1919,26 +1870,6 @@ button[disabled]:hover {
 	opacity: .2;
 }
 
-::-webkit-scrollbar {
-	width: $scrollbarSize;
-	/* for vertical scrollbars */
-	height: $scrollbarSize;
-	/* for horizontal scrollbars */
-}
-
-::-webkit-scrollbar-track {
-	background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-	background: $headerBackgroundColor;
-	border: 2px solid $windowBackgroundColor;
-}
-
-::-webkit-scrollbar-thumb:hover {
-	background: lighten($headerBackgroundColor, 10%);
-}
-
 .bootstrap-switch {
 	background: $toolbarBackgroundColor;
 	outline: none;
@@ -2183,7 +2114,6 @@ button[disabled]:hover {
 	outline: none;
 }
 
-
 /* COMMENTS */
 
 .ctl-protocol {
@@ -2338,24 +2268,6 @@ button[disabled]:hover {
 	float: right;
 	margin: 5px 0;
 }
-
-
-/* STATS */
-
-.chart-donut {
-	width: 29rem;
-	height: 29rem;
-	margin: 0 auto;
-}
-
-path.color0 {
-	fill: #1072b8;
-}
-
-path.color1 {
-	fill: #35526b;
-}
-
 
 /* YASGUI */
 
@@ -3044,7 +2956,6 @@ iframe {
 	width: 100%;
 	height: 100%;
 }
-
 
 /* ANIMATIONS */
 
