Refactored to be compatible with ArtivityCloud

--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -1127,7 +1127,7 @@ h4 {
 /* VIEWS */
 
 .view-container {
-	position: relative;
+	//position: relative;
 	display: block;
 	width: 100%;
 	height: 100%;
