--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -354,24 +354,6 @@ button:focus,
 	margin: 0;
 }
 
-.btn-header {
-	margin: 0 !important;
-	min-width: $toolbarHeight;
-	height: $toolbarHeight;
-	line-height: $toolbarHeight;
-	vertical-align: middle;
-	background: none;
-	color: $headerTextColor;
-}
-
-.btn-header:hover {
-	color: $headerTextColor !important;
-}
-
-.btn-header.btn-text {
-	padding: 0 15px !important;
-}
-
 .circular,
 .btn-circular {
 	border-radius: 50%;
@@ -1225,10 +1207,6 @@ h4 {
 	color: $infoColor;
 }
 
-.toolbar .btn:last-child .btn-label {
-	padding-right: 10px;
-}
-
 .toolbar.toolbar-floating {
 	border: 1px solid #dedede;
 	height: $toolbarHeight + 2px;
@@ -1257,8 +1235,14 @@ h4 {
 }
 
 .toolbar-header .btn {
-	color: rgba($headerTextColor, .7);
 	padding: 0;
+	margin: 0 !important;
+	min-width: $toolbarHeight;
+	height: $toolbarHeight;
+	line-height: $toolbarHeight;
+	vertical-align: middle;
+	background: none;
+	color: rgba($headerTextColor, .7);
 }
 
 .toolbar-header .btn:hover,
@@ -1266,6 +1250,14 @@ h4 {
 .toolbar-header .btn.btn-active {
 	background: rgba(255, 255, 255, .1);
 	color: rgba($headerTextColor, 1);
+}
+
+.toolbar-header .txt-title {
+	text-transform: uppercase !important;
+}
+
+.toolbar-header .btn.btn-text {
+	padding: 0 15px !important;
 }
 
 .toolbar-header .btn .btn-label {
@@ -1525,7 +1517,7 @@ svg {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: rgba(0, 0, 0, .25) url('resources/images/placeholder-avatar-black.svg') top left no-repeat;
+	background: rgba(0, 0, 0, .25) url('resources/img/placeholder-avatar-black.svg') top left no-repeat;
 	background-size: cover;
 	opacity: .2;
 	z-index: 1;
@@ -1587,7 +1579,7 @@ svg {
 	box-shadow: none;
 	width: 100%;
 	height: 201px;
-	background: #ffffff url('resources/images/placeholder-img.png') center center no-repeat;
+	background: #ffffff url('resources/img/placeholder-img.png') center center no-repeat;
 	background-size: 125px auto;
 }
 
@@ -1943,7 +1935,7 @@ button[disabled]:hover {
 	position: relative;
 	height: 300px;
 	text-align: center;
-	background: url('resources/images/construction.svg') center center no-repeat;
+	background: url('resources/img/construction.svg') center center no-repeat;
 	background-size: 100px 100px;
 	opacity: .2;
 }
@@ -2932,19 +2924,19 @@ iframe {
 }
 
 .window-title-btns.win .btn-min .btn-control {
-	background: url('resources/images/windows/btn-minimize.png') center center no-repeat;
+	background: url('resources/img/windows/btn-minimize.png') center center no-repeat;
 }
 
 .window-title-btns.win .btn-max .btn-control {
-	background: url('resources/images/windows/btn-maximize.png') center center no-repeat;
+	background: url('resources/img/windows/btn-maximize.png') center center no-repeat;
 }
 
 .window-title-btns.win .btn-max.maximized .btn-control {
-	background: url('resources/images/windows/btn-restore.png') center center no-repeat;
+	background: url('resources/img/windows/btn-restore.png') center center no-repeat;
 }
 
 .window-title-btns.win .btn-close .btn-control {
-	background: url('resources/images/windows/btn-close.png') center center no-repeat;
+	background: url('resources/img/windows/btn-close.png') center center no-repeat;
 }
 
 .window-title-btns.win .btn-close:hover {
